presentation for lab04

--- a/labs/lab04/presentation/os2--lab04--presentation.qmd
+++ b/labs/lab04/presentation/os2--lab04--presentation.qmd
@@ -1,33 +1,38 @@
 ---
 # Preamble
 
-## Author
+# Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
       postal-code: 117198
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+# Title
+title: "Лабораторная работа №4"
+subtitle: "Работа с программными пакетами"
 license: CC BY
-date: 1970-01-01
-## Generic options
+date: 2024-09-27
+# Generic options
 lang: ru-RU
 crossref:
   lof-title: Список иллюстраций
   lot-title: Список таблиц
   lol-title: Листинги
-## Formats
+# Formats
 format:
-### Pdf output format
+  ## Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    ## Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ## Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -53,180 +58,256 @@ format:
 
 # Информация
 
-## Докладчик
+# Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Цель работы
 
-:::
-::: {.column width="30%"}
+Получить навыки работы с репозиториями и менеджерами пакетов
 
-![](./image/kulyabov.jpg)
+# Задание
 
-:::
-::::::::::::::
+1. Изучите, как и в каких файлах подключаются репозитории для установки программного обеспечения; изучите основные возможности (поиск, установка, обновление, удаление пакета, работа с историей действий) команды dnf (см. раздел 4.4.1).
+2. Изучите и повторите процесс установки/удаления определённого пакета с использованием возможностей dnf (см. раздел 4.4.1).
+3. Изучите и повторите процесс установки/удаления определённого пакета с использованием возможностей rpm (см. раздел 4.4.2).
 
-# Вводная часть
+# Выполнение лабораторной работы
 
-## Актуальность
+# Работа с репозиториями
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+1. В консоли перейдите в режим работы суперпользователя (используйте команду `su -`) ([рис. @fig-001])
 
-## Объект и предмет исследования
+2. Перейдите в каталог /etc/yum.repos.d и изучите содержание каталога и файлов репозиториев: ([рис. @fig-001])
+   `cd /etc/yum.repos.d`
+   `ls`
+   `cat название_репозитория.repo`
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+#
 
-## Цели и задачи
+![Переход](image/root_start.png){#fig-001}
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Выведите на экран список репозиториев: ([рис. @fig-002])
 
-## Материалы и методы
+`dnf repolist`
+и поясните полученную информацию.
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Выведите на экран список пакетов, в названии или описании которых есть слово user: ([рис. @fig-002])
 
-# Создание презентации
+`dnf search user`
+и поясните полученную информацию.
 
-## Процессор `pandoc`
+#
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![Операции с dnf](image/dnf_repolist_search.png){#fig-002}
 
-## Формат `pdf`
+# Установите nmap, предварительно изучив информацию по имеющимся пакетам:
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+`dnf search nmap`
+`dnf info nmap`
+`dnf install nmap`
+`dnf install nmap\*`
 
-## Код для формата `pdf`
+#
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+![Установка nmap 1](image/installing_nmap_1.png)
 
-## Формат `html`
+#
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+![Установка nmap 2](image/installing_nmap_2.png)
 
-## Код для формата `html`
+# Поясните разницу между dnf install nmap и dnf install nmap\*.
 
-- Тема задаётся в файле `Makefile`
+- `dnf install nmap` устанавливает только пакет **nmap**, а `dnf install nmap\*` подбирает и ставит **все** доступные пакеты, имена которых начинаются с **nmap**.
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Удалите nmap:
 
-## Получающиеся форматы
+`dnf remove nmap`
+`dnf remove nmap\*`
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![Удаляем nmap](image/removing_nmap.png)
 
-# Элементы презентации
+# Получите список имеющихся групп пакетов, затем установите группу пакетов RPM Development Tools:
 
-## Актуальность
+`dnf groups list`
+`LANG=C dnf groups list`
+`dnf groups info "RPM Development Tools"`
+`dnf groupinstall "RPM Development Tools"`
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+# Для удаления группы пакетов RPM Development Tools можно воспользоваться командой
 
-## Цели и задачи
+`dnf groupremove "RPM Development Tools"`
 
-- Не формулируйте более 1--2 целей исследования
+#
 
-## Материалы и методы
+![dnf группы 1](image/dnf_groups_1.png)
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+#
 
-## Содержание исследования
+![dnf группы 2](image/dnf_groups_2.png)
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+#
 
-## Результаты
+![`dnf groupremove`](image/dnf_groupremove.png)
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+# Посмотрите историю использования команды dnf:
 
+`dnf history`
+и отмените последнее, например шестое по счёту, действие:
+`dnf history undo 6`
 
-## Итоговый слайд
+#
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+![`dnf history`](image/dnf_history.png)
 
-# Рекомендую
+#
 
-## Принцип 10/20/30
+![`dnf history undo 6`](image/dnf_history_undo.png)
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+# Использование rpm
 
-## Связь слайдов
+Предположим, что требуется установить текстовый браузер lynx из rpm-пакета.
 
-::: incremental
+1. Скачайте rpm-пакет lynx: ([рис. @fig-003])
+   `dnf list lynx`
+   `dnf install lynx --downloadonly`
+2. Найдите каталог, в который был помещён пакет после загрузки: ([рис. @fig-003])
+   `find /var/cache/dnf/ -name lynx\*`
+3. Перейдите в этот каталог и затем установите rpm-пакет: ([рис. @fig-003])
+   `rpm -Uhv lynx-<версия>.rpm`
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+# Определите расположение исполняемого файла: ([рис. @fig-003])
 
-:::
+`which lynx`
 
-## Количество сущностей
+![Устанавливаем lynx](image/lynx_install.png){#fig-003}
 
-::: incremental
+# Используя rpm, определите по имени файла, к какому пакету принадлежит lynx:
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+`rpm -qf $(which lynx)`
+и получите дополнительную информацию о содержимом пакета, введя:
+`rpm -qi lynx`
 
-:::
+#
 
-## Общие рекомендации
+![`rpm -qf -qi`](image/rpm-qf.png)
 
-::: incremental
+# Получите список всех файлов в пакете, используя:
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+`rpm -ql lynx`
 
-:::
+![rpm -ql](image/rpm-ql.png)
 
-## Представление данных
+# А также выведите перечень файлов с документацией пакета, введя:
 
-::: incremental
+`rpm -qd lynx`
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+![rpm -qd](image/rpm-qd.png)
 
-:::
+# Посмотрите файлы документации, применив команду `man lynx`.
+
+![man lynx](image/man_lynx.png)
+
+# Выведите на экран перечень и месторасположение конфигурационных файлов пакета: ([рис. @fig-004])
+
+`rpm -qc lynx`
+
+# Выведите на экран расположение и содержание скриптов, выполняемых при установке пакета: ([рис. @fig-004])
+
+`rpm -q --scripts lynx`
+
+![rpm -qc --scripts](image/rpm-qc--scripts.png){#fig-004}
+
+# В отдельном терминале под своей учётной записью запустите текстовый браузер lynx, чтобы проверить корректность установки пакета.
+
+![lynx](image/lynx.png)
+
+# Вернитесь в терминал с учётной записью root и удалите пакет:
+
+`rpm -e lynx`
+`ls`
+
+![rpm -e lynx](image/remove_lynx.png)
+
+Предположим, что требуется из rpm-пакетов установить dnsmasq (DNS-, DHCP- и TFTPсервер).
+
+# Установите пакет dnsmasq: ([рис. @fig-005])
+
+`dnf list dnsmasq`
+`dnf install dnsmasq`
+и определите расположение исполняемого файла: ([рис. @fig-005])
+`which dnsmasq` 2. Определите по имени файла, к какому пакету принадлежит dnsmasq: ([рис. @fig-005])
+`rpm -qf $(which dnsmasq)`
+и получите дополнительную информацию о содержимом пакета: ([рис. @fig-005])
+`rpm -qi dnsmasq`
+
+#
+
+![dnsmasq 1](image/dnsmasq.png){#fig-005}
+
+# Получите список всех файлов в пакете:
+
+`rpm -ql dnsmasq`
+
+![rpm -ql dnsmasq](image/dnsmasq_2.png)
+
+# А также выведите перечень файлов с документацией пакета:
+
+`rpm -qd dnsmasq`
+
+![rpm -qd dnsmasq](image/dnsmasq_3.png)
+
+# Посмотрите файлы документации, применив команду `man dnsmasq`.
+
+![`man dnsmasq`](image/man_dnsmasq.png)
+
+# Выведите на экран перечень и месторасположение конфигурационных файлов пакета: ([рис. @fig-006])
+
+`rpm -qc dnsmasq`
+
+# Выведите на экран расположение и содержание скриптов, выполняемых при установке пакета: ([рис. @fig-006])
+
+`rpm -q --scripts dnsmasq`
+и поясните, для чего предназначены скрипты.
+
+![dnsmasq 4](image/dnsmasq_4.png){#fig-006}
+
+# Вернитесь в терминал с учётной записью root и удалите пакет:
+
+`rpm -e dnsmasq`
+
+![rpm -e dnsmasq](image/dnsmasq_remove.png)
+
+# Контрольные вопросы
+
+# Какая команда позволяет вам искать пакет rpm, содержащий файл useradd?
+
+- rpm -qf /usr/sbin/useradd или dnf provides \*/useradd
+
+# Какие команды вам нужно использовать, чтобы показать имя группы dnf, которая содержит инструменты безопасности и показывает, что находится в этой группе?
+
+- dnf groupinfo "Security Tools" (или dnf groupinfo --hidden "Security Tools")
+
+# Какая команда позволяет вам установить rpm, который вы загрузили из Интернета и который не находится в репозиториях?
+
+- sudo rpm -Uvh /path/to/package.rpm (или sudo dnf install /path/to/package.rpm)
+
+# Вы хотите убедиться, что пакет rpm, который вы загрузили, не содержит никакого опасного кода сценария. Какая команда позволяет это сделать?
+
+- rpm --checksig --nosignature /path/to/package.rpm (или rpm --checksig /path/to/package.rpm)
+
+# Какая команда показывает всю документацию в rpm?
+
+- rpm -q --docs -p /path/to/package.rpm (или rpm -qd package-name)
+
+# Какая команда показывает, какому пакету rpm принадлежит файл?
+
+- rpm -qf /path/to/file
+
+# Выводы
+
+Я получил навыки работы с репозиториями и менеджерами пакетов в Rocky.
