--- a/labs/lab05/presentation/os2--lab05--presentation.qmd
+++ b/labs/lab05/presentation/os2--lab05--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,10 +14,10 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: Лабораторная работа №5
+subtitle: Управление системными службами
 license: CC BY
-date: 1970-01-01
+date: 2025-10-04
 ## Generic options
 lang: ru-RU
 crossref:
@@ -26,8 +26,13 @@ crossref:
   lol-title: Листинги
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   beamer:
+    include-in-header:
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -38,10 +43,10 @@ format:
     section-titles: true
     theme: metropolis
     themeoptions: progressbar=frametitle,sectionpage=progressbar,numbering=fraction
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-### Html output
+  ### Html output
   revealjs:
     transition: slide
     margin: 0.2
@@ -55,178 +60,234 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+- Гелдиев Ыхлас
+- студент
+- Российский университет дружбы народов им. П. Лумумбы
+- [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+- <https://geldiyevy.github.io/ru/>
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+## Цель работы
 
-:::
-::: {.column width="30%"}
+Получить навыки управления системными службами операционной системы посредством systemd.
 
-![](./image/kulyabov.jpg)
+## Задание
 
-:::
-::::::::::::::
+1. Выполните основные операции по запуску (останову), определению статуса, добавлению (удалению) в автозапуск и пр. службы Very Secure FTP (раздел 5.4.1).
+2. Продемонстрируйте навыки по разрешению конфликтов юнитов для служб firewalld и iptables (раздел 5.4.2).
+3. Продемонстрируйте навыки работы с изолированными целями (разделы 5.4.3, 5.4.4).
 
-# Вводная часть
+# Выполнение лабораторной работы
 
-## Актуальность
+# Управление сервисами
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+## Получите полномочия администратора
 
-## Объект и предмет исследования
+`su -`
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![`su -`](image/su.png)
 
-## Цели и задачи
+## Проверьте статус службы Very Secure FTP: ([рис. @fig-001])
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+`systemctl status vsftpd`
 
-## Материалы и методы
+Вывод команды должен показать, что сервис в настоящее время отключён, так как
+служба Very Secure FTP не установлена.
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+## Установите службу Very Secure FTP: ([рис. @fig-001])
 
-# Создание презентации
+`dnf -y install vsftpd`
 
-## Процессор `pandoc`
+![VSFTPD 1](image/vsftpd_1.png){#fig-001}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+## Запустите службу Very Secure FTP: ([рис. @fig-002])
 
-## Формат `pdf`
+`systemctl start vsftpd`
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+## Проверьте статус службы Very Secure FTP: ([рис. @fig-002])
 
-## Код для формата `pdf`
+`systemctl status vsftpd`
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+Вывод команды должен показать, что служба в настоящее время работает, но не будет
+активирована при перезапуске операционной системы.
 
-## Формат `html`
+##
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+![VSFTPD 2](image/vsftpd_2.png){#fig-002}
 
-## Код для формата `html`
+## Добавьте службу Very Secure FTP в автозапуск при загрузке операционной системы, используя команду `systemctl enable`. Затем проверьте статус службы. Удалите службу из автозапуска, используя команду `systemctl disable`, и снова проверьте её статус.
 
-- Тема задаётся в файле `Makefile`
+![VSFTPD 3](image/vsftpd_3.png)
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+## Выведите на экран символические ссылки, ответственные за запуск различных сервисов: ([рис. @fig-003])
 
-## Получающиеся форматы
+`ls /etc/systemd/system/multi-user.target.wants`
+Должно отобразиться, что ссылка на `vsftpd.service` не существует.
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+## Снова добавьте службу Very Secure FTP в автозапуск: ([рис. @fig-003])
 
-# Элементы презентации
+`systemctl enable vsftpd`
+и выведите на экран символические ссылки, ответственные за запуск различных
+сервисов.
 
-## Актуальность
+Вывод команды покажет, что создана символическая ссылка для
+файла `/usr/lib/systemd/system/vsftpd.service` в каталоге
+`/etc/systemd/system/multi-user.target.wants`.
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+## Снова проверьте статус службы Very Secure FTP: ([рис. @fig-003])
 
-## Цели и задачи
+`systemctl status vsftpd`
+Теперь вы увидите, что для файла юнита состояние изменено с `disabled` на `enabled`.
 
-- Не формулируйте более 1--2 целей исследования
+![VSFTPD 4](image/vsftpd_4.png){#fig-003}
 
-## Материалы и методы
+## Выведите на экран список зависимостей юнита:
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+    `systemctl list-dependencies vsftpd`
 
-## Содержание исследования
+    ![VSFTPD dependencies](image/vsftpd_dep.png)
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+## Выведите на экран список юнитов, которые зависят от данного юнита:
 
-## Результаты
+    `systemctl list-dependencies vsftpd --reverse`
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+    ![VSFTPD reverse dependensies](image/vsftpd_rev_dep.png)
 
+# Конфликты юнитов
 
-## Итоговый слайд
+## Получите полномочия администратора. Установите iptables:
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+`dnf -y install iptables\*`
 
-# Рекомендую
+![`dnf -y install iptables*`](image/iptables_install.png)
 
-## Принцип 10/20/30
+## Проверьте статус firewalld и iptables: ([рис. @fig-004])
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+`systemctl status firewalld`
+`systemctl status iptables`
 
-## Связь слайдов
+## Попробуйте запустить firewalld и iptables: ([рис. @fig-004])
 
-::: incremental
+`systemctl start firewalld`
+`systemctl start iptables`
+Вы увидите, что при запуске одной службы вторая дезактивируется или не запускается.
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+##
 
-:::
+![Conflicts 1](image/iptables_1.png){#fig-004}
 
-## Количество сущностей
+## Введите: ([рис. @fig-005])
 
-::: incremental
+`cat /usr/lib/systemd/system/firewalld.service`
+и опишите настройки конфликтов для этого юнита при наличии.
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+## Введите: ([рис. @fig-005])
 
-:::
+`cat /usr/lib/systemd/system/iptables.service`
+и опишите настройки конфликтов для этого юнита.
 
-## Общие рекомендации
+![Conflicts 2](image/iptables_2.png){#fig-005}
 
-::: incremental
+## Выгрузите службу iptables (на всякий случай, чтобы убедиться, что данная служба
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+не загружена в систему): ([рис. @fig-006])
+`systemctl stop iptables`
+и загрузите службу firewalld
+`systemctl start firewalld`
 
-:::
+## Заблокируйте запуск iptables, введя: ([рис. @fig-006])
 
-## Представление данных
+`systemctl mask iptables`
+Будет создана символическая ссылка на /dev/null для
+/etc/systemd/system/iptables.service (проверьте это). Поскольку юнитфайлы в /etc/systemd имеют приоритет над файлами в /usr/lib/systemd, то это
+сделает невозможным случайный запуск сервиса iptables.
 
-::: incremental
+## Попробуйте запустить iptables: ([рис. @fig-006])
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+`systemctl start iptables`
+Должно появиться сообщение об ошибке, указывающее, что служба замаскирована
+и по этой причине не может быть запущена.
 
-:::
+## Попробуйте добавить iptables в автозапуск: ([рис. @fig-006])
+
+`systemctl enable iptables`
+Сервис будет неактивен, а статус загрузки отобразится как замаскированный.
+
+![Conflicts 3](image/iptables_3.png){#fig-006}
+
+# Изолируемые цели
+
+## Получите полномочия администратора. Перейдите в каталог systemd и найдите список всех целей, которые можно изолировать: ([рис. @fig-007])
+
+`cd /usr/lib/systemd/system`
+`grep Isolate \*.target`
+
+## Переключите операционную систему в режим восстановления: ([рис. @fig-007])
+
+`systemctl isolate rescue.target`
+При этом необходимо ввести пароль root на консоли сервера для входа в систему.
+
+![Isolate 1](image/isolate_1.png){#fig-007}
+
+## Перезапустите операционную систему следующим образом:
+
+`systemctl isolate reboot.target`
+
+![`systemctl isolate reboot.target`](image/isolate_2.png)
+
+# Цель по умолчанию
+
+## Получите полномочия администратора. Выведите на экран цель, установленную по
+
+умолчанию: ([рис. @fig-008])
+`systemctl get-default`
+
+## Для установки цели по умолчанию используется команда:
+
+`systemctl set-default`
+Например, для запуска по умолчанию текстового режима введите: ([рис. @fig-008])
+`systemctl set-default multi-user.target`
+Перегрузите систему командой reboot. Убедитесь, что система загрузилась в текстовом режиме. Получите полномочия администратора. Для запуска по умолчанию графического режима введите:
+`systemctl set-default graphical.target`
+Вновь перегрузите систему командой reboot. Убедитесь, что система загрузилась в графическом режиме.
+
+##
+
+![Default 1](image/default_1.png){#fig-008}
+
+##
+
+![Default 2](image/default_2.png)
+
+# Контрольные вопросы
+
+## Что такое юнит (unit)? Приведите примеры.
+
+- Юнит — это конфигурационный объект systemd (service, socket, target, mount и т.д.), например sshd.service, multi-user.target, dev-sda1.device.
+
+## Какая команда позволяет вам убедиться, что цель больше не входит в список автоматического запуска при загрузке системы?
+
+- systemctl disable <unit>
+
+## Какую команду вы должны использовать для отображения всех сервисных юнитов, которые в настоящее время загружены?
+
+- systemctl list-units --type=service --all
+
+## Как создать потребность (wants) в сервисе?
+
+- В юните другого сервиса добавить в секцию [Install] строку Wants=<your.service> или в единице создать symlink в .wants/; можно systemctl add-wants <target> <service>.
+
+## Как переключить текущее состояние на цель восстановления (rescue target)?
+
+- systemctl isolate rescue.target
+
+## Поясните причину получения сообщения о том, что цель не может быть изолирована.
+
+- Потому что другие активные юниты зависят от неё, или цель не допускает изоляции из-за зависимостей/состояния.
+
+## Вы хотите отключить службу systemd, но, прежде чем сделать это, вы хотите узнать, какие другие юниты зависят от этой службы. Какую команду вы бы использовали?
+
+- systemctl list-dependencies --reverse <service>
+
+## Выводы
+
+Я получил навыки управления системными службами операционной системы посредством systemd.
